--- a/SureService/src/pages/home/home.scss
+++ b/SureService/src/pages/home/home.scss
@@ -1,6 +1,10 @@
 page-home {
+    .scroll {
+      height: 100%
+    }
+
     #map {
-      height: 100%;
       width: 100%;
+      height: 100%;
     }
 }
