--- a/SureService/src/pages/initial/initial.scss
+++ b/SureService/src/pages/initial/initial.scss
@@ -14,6 +14,7 @@ page-initial {
         background: white; 
         color:#0062ff;
         border-color: white;
+        height: 50px;
     }
     
     .Subtitulo {
