--- a/SureService/src/pages/login/login.scss
+++ b/SureService/src/pages/login/login.scss
@@ -3,5 +3,12 @@ page-login {
     .titulo {font-weight: bold;}
     
     .subtitulo{text-align: center;}  
+
+    #btn_login {
+        background: #0062ff; 
+        color: white;
+        border-color: #0062ff; 
+        height: 50px;
+    }
       
 }
