--- a/SureService/src/pages/signup/signup.scss
+++ b/SureService/src/pages/signup/signup.scss
@@ -4,4 +4,11 @@ page-signup {
     .titulo{font-weight: bold;}
     
     .subtitulo {text-align: center;}
+
+    #btn_Iniciar {
+        background: #0062ff; 
+        color: white;
+        border-color: #0062ff; 
+        height: 50px;
+    }
 }
