--- a/SureService/src/app/app.html
+++ b/SureService/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content" type="overlay">
+<ion-menu id="MyMenu" [content]="content" type="overlay">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu</ion-title>
@@ -6,7 +6,7 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button  menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
     </ion-list>
