--- a/SureService/src/pages/signup/signup.scss
+++ b/SureService/src/pages/signup/signup.scss
@@ -6,9 +6,9 @@ page-signup {
     .subtitulo {text-align: center;}
 
     #btn_Iniciar {
-        background: #0062ff; 
+        background: #222; 
         color: white;
-        border-color: #0062ff; 
         height: 50px;
+        border: none;
     }
 }
