--- a/SureService/src/theme/variables.scss
+++ b/SureService/src/theme/variables.scss
@@ -34,7 +34,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #0062ff,
+  primary:    #0052EB,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
@@ -52,8 +52,6 @@ $colors: (
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
-
-
 
 
 // App Windows Variables
