--- a/SureService/src/pages/home/home.scss
+++ b/SureService/src/pages/home/home.scss
@@ -7,4 +7,14 @@ page-home {
       width: 100%;
       height: 100%;
     }
+    .toolbar {
+      position: absolute;
+  
+      .toolbar-background {
+        background: transparent;
+      }
+      .toolbar-title {
+        color: black;
+      }
+    }
 }
