--- a/SureService/src/pages/initial/initial.scss
+++ b/SureService/src/pages/initial/initial.scss
@@ -12,7 +12,7 @@ page-initial {
     
     #btn_Iniciar {
         background: white; 
-        color:#0062ff;
+        color:#222;
         border: none;
         height: 50px;
         font-weight: bold;
