--- a/SureService/src/pages/home/home.scss
+++ b/SureService/src/pages/home/home.scss
@@ -4,8 +4,10 @@ page-home {
     }
 
     #map {
-      width: 100%;
+      background-size: cover;
       height: 100%;
+      overflow: hidden;
+      background: center center fixed
     }
     .toolbar {
       position: absolute;
