--- a/SureService/platforms/android/app/src/main/res/xml/config.xml
+++ b/SureService/platforms/android/app/src/main/res/xml/config.xml
@@ -46,4 +46,8 @@
     <feature name="Geolocation">
         <param name="android-package" value="org.apache.cordova.geolocation.Geolocation" />
     </feature>
+    <feature name="HeaderColor">
+        <param name="android-package" value="tomloprod.HeaderColor" />
+        <param name="onload" value="true" />
+    </feature>
 </widget>
