--- a/SureService/src/app/app.html
+++ b/SureService/src/app/app.html
@@ -1,19 +1,25 @@
 <ion-menu id="MyMenu" [content]="content" type="overlay">
   
   <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
+    <ion-toolbar style="color: white;">
+      <ion-title>SURE SERVICE</ion-title>
     </ion-toolbar>
   </ion-header>
   
   <ion-content>
     <ion-list>
-      <button  menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         <ion-icon [name]="p.icon" item-left></ion-icon>
         {{p.title}}
       </button>
     </ion-list>
   </ion-content>
+
+  <ion-footer>
+      <ion-toolbar padding>
+        <p style="color: white;">v4.291.10001</p>
+      </ion-toolbar>
+    </ion-footer>
 </ion-menu>
 
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
