--- a/SureService/src/theme/variables.scss
+++ b/SureService/src/theme/variables.scss
@@ -41,6 +41,8 @@ $colors: (
   dark:       #222
 );
 
+$toolbar-background: #222;
+
 
 // App iOS Variables
 // --------------------------------------------------
